--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.grab-google-map {
+  width: 100%;
+  height: 20rem;
+  border-radius: .25rem;
+}
+
+@media screen and (min-width: 768px) {
+  .grab-google-map {
+    width: 60%;
+    height: 40rem;
+  }
+}
