--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+.grab-google-map-container,
 .grab-google-map {
   width: 100%;
   height: 20rem;
@@ -9,8 +10,9 @@
 }
 
 @media screen and (min-width: 768px) {
+
+  .grab-google-map-container,
   .grab-google-map {
-    width: 60%;
     height: 40rem;
   }
 }
