--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.grab-google-map-container,
 .grab-google-map {
   width: 100%;
   height: 20rem;
@@ -11,8 +10,22 @@
 
 @media screen and (min-width: 768px) {
 
-  .grab-google-map-container,
   .grab-google-map {
     height: 40rem;
   }
+}
+
+::-webkit-scrollbar {
+  @apply w-0.5 h-0.5 !important;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-transparent !important;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-400 !important;
+}
+::-webkit-scrollbar-thumb {
+  @apply rounded !important;
 }
